--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -94,17 +94,17 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/customs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Scheduled Customs</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/customs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Error-Free Documentation</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/customs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Quick Procedure</h6>
                     </div>
