--- a/channel-partner.html
+++ b/channel-partner.html
@@ -94,17 +94,17 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/channel partner.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Secure Deliveries</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/channel partner.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Medical supplies</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/channel partner.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Fast and Reliable</h6>
                     </div>
