--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -94,17 +94,17 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/danger.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Safety</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/danger.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Effective Handling</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/danger.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Secure Packaging</h6>
                     </div>
