--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -94,17 +94,17 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/drugs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Process Of Pharmaceutical Shipping</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/drugs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Essential Rules And Regulations For Pharmaceutical Shipping</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/drugs.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Protection Guidelines To Manage Pharma Shipping</h6>
                     </div>
