--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
 
         <div class="hero-content">
             <div class="hero_content_wrap">
-                <h1 id="typed-text">Welcome <br>To INC Shipping LLC</h1>
-                <p>The International Freight Forwarders</p>
+                <h2 class="typed-text" data-text="Welcome">Welcome</h2>
+                <h2 class="typed-text" data-text="To INC Shipping LLC">To INC Shipping LLC</h2>
+                <h1>The International Freight Forwarders</h1>
                 <button onclick="window.location.href='contact.html'" class="quote-button">Get a Free Quote</button>
             </div>
+            
+            
 
             <div class="container-image">
                 <img src="img/container.webp" alt="Hanging Container">
