--- a/air-freight.html
+++ b/air-freight.html
@@ -35,23 +35,62 @@
                 <div style="padding: 0;"
                     class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
                     <div class="navbar_container">
-                        <div class="nav_item">
-                            <a href="index.html">Home</a>
-                        </div>
-                        <div class="nav_item ">
-                            <a href="about.html">About Us</a>
-                        </div>
-                        <div class="nav_item ">
-                            <a href="services.html ">Services</a>
-                        </div>
-                        <div class="nav_item ">
-                            <a href="">Blogs</a>
-                        </div>
-                        <div class="nav_item ">
-                            <a href="contact.html">Contact Us</a>
+                        <div class="nav_main_menu_wrap">
+                            <div class="nav_item nav_active">
+                                <a href="index.html">Home</a>
+                            </div>
+                            <div class="nav_item">
+                                <a href="about.html">About Us</a>
+                            </div>
+                            <div class="nav_item nav_services">
+                                <a href="services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
+                                <div class="services_dropdown_container">
+                                    <div class="services_dropdown">
+                                        <div class="services_dropdown_items_box">
+                                            <a href="air-freight.html"><i class="fa-solid fa-caret-right"></i> Air
+                                                Freight</a>
+                                            <a href="sea-freight.html"><i class="fa-solid fa-caret-right"></i> Sea
+                                                Freight</a>
+                                            <a href="road-freight.html"><i class="fa-solid fa-caret-right"></i> Road
+                                                Freight</a>
+                                            <a href="customs-clearance.html"><i class="fa-solid fa-caret-right"></i>
+                                                Customs Clearance</a>
+                                            <a href="temprature-controlled-cargo.html"><i
+                                                    class="fa-solid fa-caret-right"></i> Temp. Controlled Cargo</a>
+                                            <a href="warehousing.html"><i class="fa-solid fa-caret-right"></i>
+                                                Warehousing</a>
+                                            <a href="cross-trade.html"><i class="fa-solid fa-caret-right"></i>
+                                                Cross-Trade</a>
+                                        </div>
+                                        <div class="services_dropdown_items_box">
+                                            <a href="project-cargo.html"><i class="fa-solid fa-caret-right"></i> Project
+                                                Cargo</a>
+                                            <a href="corporate-courier.html"><i class="fa-solid fa-caret-right"></i>
+                                                Corporate Courier</a>
+                                            <a href="channel-partner.html"><i class="fa-solid fa-caret-right"></i>
+                                                Channel Partner</a>
+                                            <a href="shipment-to-far-east.html"><i class="fa-solid fa-caret-right"></i>
+                                                Far East Shipping</a>
+                                            <a href="dangerous-goods.html"><i class="fa-solid fa-caret-right"></i>
+                                                Dangerous Goods</a>
+                                            <a href="healthcare.html"><i class="fa-solid fa-caret-right"></i> Healthcare
+                                                Instruments Shipping</a>
+                                            <a href="pharma-shipment-handling.html"><i
+                                                    class="fa-solid fa-caret-right"></i> Pharma Shipment Handling</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="nav_item">
+                                <a href="">Blogs</a>
+                            </div>
+                            <div class="nav_item">
+                                <a href="contact.html">Contact Us</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_social_col">
                     <div class="nav_social_container">
                         <a target="_blank" href="https://www.instagram.com/incexpressshipping/"><i
@@ -70,15 +109,47 @@
             </div>
 
             <!-- MOBILE MENU -->
+
             <div class="hamburger_mobile_menu" id="hamburger_mobile_menu">
                 <a href="index.html">Home</a> <br>
                 <a href="about.html">About Us</a> <br>
-                <a href="services.html">Services</a> <br>
-                <a href="">Blogs</a> <br>
+                <div class="mobile_services_dropdown">
+                    <a href="#" id="services_link">Services <i class="fa-solid fa-chevron-down"></i></a> <br>
+                    <div class="mobile_services_dropdown_container" id="services_dropdown">
+                        <a href="air-freight.html"><i class="fa-solid fa-caret-right"></i> Air
+                            Freight</a><br>
+                        <a href="sea-freight.html"><i class="fa-solid fa-caret-right"></i> Sea
+                            Freight</a><br>
+                        <a href="road-freight.html"><i class="fa-solid fa-caret-right"></i> Road
+                            Freight</a><br>
+                        <a href="customs-clearance.html"><i class="fa-solid fa-caret-right"></i>
+                            Customs Clearance</a><br>
+                        <a href="temprature-controlled-cargo.html"><i class="fa-solid fa-caret-right"></i> Temp.
+                            Controlled Cargo</a><br>
+                        <a href="warehousing.html"><i class="fa-solid fa-caret-right"></i>
+                            Warehousing</a><br>
+                        <a href="cross-trade.html"><i class="fa-solid fa-caret-right"></i>
+                            Cross-Trade</a><br>
+                        <a href="project-cargo.html"><i class="fa-solid fa-caret-right"></i> Project
+                            Cargo</a><br>
+                        <a href="corporate-courier.html"><i class="fa-solid fa-caret-right"></i>
+                            Corporate Courier</a><br>
+                        <a href="channel-partner.html"><i class="fa-solid fa-caret-right"></i>
+                            Channel Partner</a><br>
+                        <a href="shipment-to-far-east.html"><i class="fa-solid fa-caret-right"></i>
+                            Far East Shipping</a><br>
+                        <a href="dangerous-goods.html"><i class="fa-solid fa-caret-right"></i>
+                            Dangerous Goods</a><br>
+                        <a href="healthcare.html"><i class="fa-solid fa-caret-right"></i> Healthcare
+                            Instruments Shipping</a><br>
+                        <a href="pharma-shipment-handling.html"><i class="fa-solid fa-caret-right"></i> Pharma Shipment
+                            Handling</a><br>
+                    </div>
+                </div>
+                <a href="#">Blogs</a> <br>
                 <a href="contact.html">Contact Us</a> <br>
             </div>
         </header>
-
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
                 <h1>AIR FREIGHT</h1>
