--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
                     class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
                     <div class="navbar_container">
                         <div class="nav_main_menu_wrap">
-                            <div class="nav_item nav_active">
+                            <div class="nav_item ">
                                 <a href="index.html">Home</a>
                             </div>
-                            <div class="nav_item">
+                            <div class="nav_item nav_active">
                                 <a href="about.html">About Us</a>
                             </div>
                             <div class="nav_item nav_services">
@@ -227,6 +227,21 @@
 
 
     <section class="about_sec2">
+        <div class="about_sec2_bg">
+            <section class="orbit_dots">
+                <ul class="solarsystem">
+                    <li class="mercury"><a href="#mercury"><span>dot</span></a></li>
+                    <li class="venus"><a href="#venus"><span>dot</span></a></li>
+                    <li class="earth"><a href="#earth"><span>dot</span></a></li>
+                    <li class="mars"><a href="#mars"><span>dot</span></a></li>
+                    <li class="jupiter"><a href="#jupiter"><span>dot</span></a></li>
+                    <li class="saturn"><a href="#saturn"><span>dot</span></a></li>
+                    <li class="uranus"><a href="#uranus"><span>dot</span></a></li>
+                    <li class="neptune"><a href="#neptune"><span>dot</span></a></li>
+                    <li class="pluto"><a href="#pluto"><span>dot</span></a></li>
+                </ul>
+            </section>
+        </div>
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 about_sec2_col animate fadeRight">
                 <div class="about_sec2_card">
