--- a/services.html
+++ b/services.html
@@ -36,13 +36,13 @@
                     class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-xs-0 nav_navbar_col animate fadeInDown">
                     <div class="navbar_container">
                         <div class="nav_main_menu_wrap">
-                            <div class="nav_item nav_active">
+                            <div class="nav_item ">
                                 <a href="index.html">Home</a>
                             </div>
                             <div class="nav_item">
                                 <a href="about.html">About Us</a>
                             </div>
-                            <div class="nav_item nav_services">
+                            <div class="nav_item nav_services nav_active">
                                 <a href="services.html">Services <i class="fa-solid fa-chevron-down"></i></a>
                                 <div class="services_dropdown_container">
                                     <div class="services_dropdown">
