--- a/index.html
+++ b/index.html
@@ -183,9 +183,15 @@
             </div>
         </div>
         <div class="about_sticker">
-            <img src="img/Group 321.webp" alt="">
-            <img src="img/Group 322.webp" alt="">
-            <img src="img/Group 323.webp" alt="">
+            <div class="about_sticker_img_container">
+                <img src="img/Group 321.webp" alt="">
+            </div>
+            <div class="about_sticker_img_container">
+                <img src="img/Group 322.webp" alt="">
+            </div>
+            <div class="about_sticker_img_container">
+                <img src="img/Group 323.webp" alt="">
+            </div>
         </div>
         <div class="about_sticker_text row">
             <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -508,6 +514,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/animate.js"></script>
+
 </body>
 
 </html>
