--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -41,10 +41,10 @@
     <section class="row sec1">
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 sec1_col1">
             <div class="sec1_vector">
-                <img src="img/Vector ad 78.png" alt="">
+                <img src="img/Vector ad 78.webp" alt="">
             </div>
             <h2>Transport Solutions for your <span style="color: #FFCF56;">business</span> </h2>
-            <img src="img/Vector ad 73.png" alt="">
+            <img src="img/Vector ad 73.webp" alt="">
             <div class="row">
                 <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 sec1_subHeading">
                     <h1>The International Freight Forwarders</h1>
@@ -89,7 +89,7 @@
 
 
     <section class="sec2">
-        <img src="img/Group 404.png" alt="">
+        <img src="img/Group 404.webp" alt="">
         <div class="counter_section">
             <div class="counter_section_wrapper">
                 <div class="row home_achivements">
@@ -140,13 +140,13 @@
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 sec3_col2">
-                    <img src="img/Group 405.png" alt="">
+                    <img src="img/Group 405.webp" alt="">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 sec3_col3">
-                <img src="img/cloud vector.png" alt="">
+                <img src="img/cloud vector.webp" alt="">
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 sec3_col4">
                 <div class="sec3_col4_wrap">
@@ -342,8 +342,8 @@
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-0 col-sm-0 col-0 sec5_txt2">
-                    <img class="sec5_txt2_img1" src="img/timeline p1.png" alt="">
-                    <img class="sec5_txt2_img2" src="img/cloud vector.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p1.webp" alt="">
+                    <img class="sec5_txt2_img2" src="img/cloud vector.webp" alt="">
                 </div>
             </div>
             <div class="row">
@@ -351,7 +351,7 @@
 
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 sec5_txt3">
-                    <img class="sec5_txt2_img1" src="img/timeline p2.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                     <h3>Unmatched Quality</h3>
                     <p>
                         Being one of the best shipping company in UAE, our warehousing and logistics services tend
@@ -369,7 +369,7 @@
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-0 col-sm-0 col-0 sec5_txt2">
-                    <img class="sec5_txt2_img1" src="img/timeline p2.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                 </div>
             </div>
             <div class="row">
@@ -377,7 +377,7 @@
 
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 sec5_txt3">
-                    <img class="sec5_txt2_img1" src="img/timeline p2.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                     <h3>Personalized Approach</h3>
                     <p>
                         Being one of the best shipping company in UAE, our warehousing and logistics services tend to
@@ -394,7 +394,7 @@
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-0 col-sm-0 col-0 sec5_txt2">
-                    <img class="sec5_txt2_img1" src="img/timeline p2.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                 </div>
             </div>
             <div class="row">
@@ -402,7 +402,7 @@
 
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 sec5_txt3">
-                    <img class="sec5_txt2_img1" src="img/timeline p2.png" alt="">
+                    <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                     <h3>A to Z Services</h3>
                     <p>
                         With our end-to-end services as a shipping company in Dubai, we try to provide our clients with
@@ -422,14 +422,14 @@
             <div class="sec6_testimonial_container">
                 <div class="row">
                     <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 testi_col1">
-                        <img src="img/Group 4083.png" alt="">
+                        <img src="img/Group 4083.webp" alt="">
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 testi_col2">
                         <div class="testi_col2_txt">
                             <h3><i class="fa-solid fa-window-minimize"></i> Testimonials</h3>
                             <h2>Clients<br>Testimonials</h2>
                         </div>
-                        <img src="img/cloud vector.png" alt="">
+                        <img src="img/cloud vector.webp" alt="">
                     </div>
                 </div>
                 <div id="testimonial" class="row">
@@ -442,7 +442,7 @@
                         </p>
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 testi_col4">
-                        <img id="testimonial-img" src="img/dp01.png" alt="">
+                        <img id="testimonial-img" src="img/dp01.webp" alt="">
                         <p id="testimonial-role">Logistics Manager</p>
                         <h3 id="testimonial-name">Sarah L</h3>
                     </div>
@@ -605,28 +605,28 @@
             {
                 stars: '★★★★★',
                 text: 'INC Cargo has consistently exceeded our expectations with their reliable and timely delivery services. Their professional team handles every shipment with care, making our logistics process seamless and efficient. We highly recommend INC Cargo for any shipping needs.',
-                img: 'img/dp01.png',
+                img: 'img/dp01.webp',
                 role: 'Logistics Manager',
                 name: 'Sarah L'
             },
             {
                 stars: '★★★★★',
                 text: 'INC Cargo has been the perfect shipping partner for our e-commerce business, which we needed. Their fast and reliable delivery service has helped us maintain our customer satisfaction rates. The ease of scheduling pick ups and tracking shipments online is a huge plus. Thank you, INC Cargo.',
-                img: 'img/dp02.png',
+                img: 'img/dp02.webp',
                 role: 'E-commerce Business Owner',
                 name: 'David B'
             },
             {
                 stars: '★★★★★',
                 text: 'INC Cargo provided us with a tailored shipping solution that perfectly meets our needs. Their team took the time to understand our business and logistics challenges, and they delivered a solution that has improved our supply chain efficiency. We are very grateful for their support and expertise.',
-                img: 'img/dp03.png',
+                img: 'img/dp03.webp',
                 role: 'Supply Chain Director',
                 name: 'Michael H'
             },
             {
                 stars: '★★★★★',
                 text: 'I have been dealing with logistics companies for over 20 years, and INC Cargo is by far the best. Their professionalism, trustworthiness, and attention to detail set them apart from the competition. I can trust them with my most important shipments, and they never disappoint.',
-                img: 'img/dp04.png',
+                img: 'img/dp04.webp',
                 role: 'Logistics Manager',
                 name: 'Linda G'
             }
