--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -28,6 +28,8 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <meta name="robots" content="noindex, nofollow" />
 </head>
 
 <body>
@@ -57,7 +59,7 @@
                     </p>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 sec1_viewMore">
-                    <div onclick="window.location.href='services.html'" class="view_more_Circle">
+                    <div onclick="window.location.href='#ad_services'" class="view_more_Circle">
                     </div>
                 </div>
             </div>
@@ -160,7 +162,7 @@
     </section>
 
 
-    <section class="sec4">
+    <section class="sec4" id="ad_services">
         <div class="sec4_wrap">
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 sec4_col1">
@@ -183,7 +185,7 @@
             </div>
             <div class="service_card_container">
                 <div class="service_card_scroll">
-                    <div class="service_card" onclick="window.location.href='air-freight.html'">
+                    <div class="service_card">
                         <img src="img/Air Freight icon.webp" alt="">
                         <h3>AIR FREIGHT</h3>
                         <p>
@@ -194,7 +196,7 @@
                             provider in the UAE.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='sea-freight.html'">
+                    <div class="service_card">
                         <img src="img/Sea Freight icon.webp" alt="">
                         <h3>SEA FREIGHT</h3>
                         <p>
@@ -204,7 +206,7 @@
                             loads and oversized cargo.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='road-freight.html'">
+                    <div class="service_card">
                         <img src="img/Road Freight icon.webp" alt="">
                         <h3>ROAD FREIGHT</h3>
                         <p>
@@ -214,7 +216,7 @@
                             loads and oversized cargo.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='temprature-controlled-cargo.html'">
+                    <div class="service_card">
                         <img src="img/temp contrld cargo icon.webp" alt="">
                         <h3>TEMPERATURE CONTROLLED CARGO</h3>
                         <p>
@@ -224,7 +226,7 @@
                             ensure the quality of their products, without supporting chemical additions.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='cross-trade.html'">
+                    <div class="service_card">
                         <img src="img/Cross-Trade icon.webp" alt="">
                         <h3>CROSS TRADE</h3>
                         <p>
@@ -234,7 +236,7 @@
                             making international trading easier, faster, and growing.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='corporate-courier.html'">
+                    <div class="service_card">
                         <img src="img/Corporate Courier icon.webp" alt="">
                         <h3>Corporate Courier</h3>
                         <p>
@@ -243,7 +245,7 @@
                             reliable and continuous delivery services for a smooth supply chain.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='shipment-to-far-east.html'">
+                    <div class="service_card">
                         <img src="img/Far East Shipping icon.webp" alt="">
                         <h3>Shipment To Far East</h3>
                         <p>
@@ -252,7 +254,7 @@
                             customer support.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='healthcare.html'">
+                    <div class="service_card">
                         <img src="img/healthcare equipments shipping icon.webp" alt="">
                         <h3>Healthcare
                             Instrument Shipping</h3>
@@ -263,7 +265,7 @@
                             making international trading easier, faster, and growing.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='project-cargo.html'">
+                    <div class="service_card">
                         <img src="img/Project Cargo icon.webp" alt="">
                         <h3>PROJECT CARGO</h3>
                         <p>
@@ -273,7 +275,7 @@
                             experience, they offer unmatched quality in project cargo services.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='customs-clearance.html'">
+                    <div class="service_card">
                         <img src="img/Customs Clearance icon.webp" alt="">
                         <h3>CUSTOMS CLEARANCE</h3>
                         <p>
@@ -283,7 +285,7 @@
                             shipments by sea, land, and air.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='channel-partner.html'">
+                    <div class="service_card">
                         <img src="img/Channel Partner icon.webp" alt="">
                         <h3>Channel Partner</h3>
                         <p>
@@ -293,7 +295,7 @@
                             delivery services for documents and medical supplies in emergencies.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='warehousing.html'">
+                    <div class="service_card">
                         <img src="img/Warehousing icon.webp" alt="">
                         <h3>WAREHOUSING</h3>
                         <p>
@@ -303,7 +305,7 @@
                             distribution. Their goal is to provide expertise and cost-effective solutions.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='dangerous-goods.html'">
+                    <div class="service_card">
                         <img src="img/Dangerous Goods icon.webp" alt="">
                         <h3>Dangerous goods</h3>
                         <p>
@@ -313,7 +315,7 @@
                             regulations.
                         </p>
                     </div>
-                    <div class="service_card" onclick="window.location.href='pharma-shipment-handling.html'">
+                    <div class="service_card">
                         <img src="img/pharma shipping icon.webp" alt="">
                         <h3>Pharma Shipment
                             Handling</h3>
@@ -503,7 +505,7 @@
                         INC Express Shipping LLC excels its name as the best freight forwarding company in Dubai, with
                         an extensive approach in more than 20 countries
                     </p>
-                    <img onclick="window.location.href='https://incshipping.com/'" src="img/inc_nav_logo.webp" alt="">
+                    <img src="img/inc_nav_logo.webp" alt="">
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 footer_col2">
                     <div class="footer_map_container">
@@ -516,9 +518,9 @@
             </div>
             <p class="footer_copyright">
                 © 2024 INC Express Shipping LLC. All Rights Reserved.
-                <a target="_blank" href="https://incshipping.com/">Privacy Policy</a>
+                <a target="_blank" href="">Privacy Policy</a>
                 |
-                <a target="_blank" href="https://incshipping.com/">Terms of Service</a>
+                <a target="_blank" href="">Terms of Service</a>
             </p>
             <p class="footer_attribute">
                 Designed and Developed by:
