--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -522,8 +522,8 @@
         </div>
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
-                <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="">Privacy Policy</a> | <a
-                        href="">Terms of Service</a></p>
+                <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy Policy</a> | <a
+                        href="terms-and-conditions.html">Terms of Service</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
