privacy policy and t&c links

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -153,8 +153,8 @@
 
         <div class="about_hero-content">
             <div class="about_hero_content_wrap">
-                <h1 style="color: #fff;">Privacy Policy</h1>
-                <p style="color: #fff;">Home > Privacy Policy</p>
+                <h1 style="color: #fff;">Terms And Conditions</h1>
+                <p style="color: #fff;">Home > Terms And Conditions</p>
             </div>
         </div>
     </section>
