--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="contact_hero">
+    <section class="t_c_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
