privacy policy and t&c links

--- a/sea-freight.html
+++ b/sea-freight.html
@@ -15,6 +15,7 @@
 
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="https://kit.fontawesome.com/6c53136549.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -453,6 +454,20 @@
             </div>
         </div>
     </footer>
+
+
+
+
+
+
+    <div class="floating_btn">
+        <a target="_blank" href="https://wa.me/+971503524424" style="text-decoration: none;">
+          <div class="contact_icon">
+            <i class="fa fa-whatsapp my-float"></i>
+          </div>
+        </a>
+        <p class="text_icon">Talk to us?</p>
+      </div>
 
 
 
