--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -13,6 +13,7 @@
 
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="https://kit.fontawesome.com/6c53136549.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,6 +39,11 @@
             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 header_logo"></div>
             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-4 col-4 header_logo">
                 <img src="img/inc_nav_logo.webp" alt="">
+            </div>
+            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-7 col-7 header_contact_button">
+                <button>
+                    +971 503524424
+                </button>
             </div>
         </div>
     </header>
@@ -528,6 +534,24 @@
             </p>
         </div>
     </footer>
+
+
+
+
+
+
+    <div class="floating_btn">
+        <a target="_blank" href="https://wa.me/+971503524424" style="text-decoration: none;">
+          <div class="contact_icon">
+            <i class="fa fa-whatsapp my-float"></i>
+          </div>
+        </a>
+        <p class="text_icon">Talk to us?</p>
+      </div>
+
+
+
+
 
 
 
