--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -506,12 +506,21 @@
     <footer>
         <div class="footer_wrap">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 footer_col1">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 footer_col1">
                     <p>
                         INC Express Shipping LLC excels its name as the best freight forwarding company in Dubai, with
                         an extensive approach in more than 20 countries
                     </p>
                     <img src="img/inc_nav_logo.webp" alt="">
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 footer_col3">
+                    <h6>Call Us</h6>
+                    <a href="tel:+97143233480">+971 43233480</a><br>
+                    <a href="tel:+971503524424">+971 503524424</a>
+                    <h6>Mail Us</h6>
+                    <a href="mailto:sales@incshipping.com">sales@incshipping.com</a>
+                    <h6>Location</h6>
+                    <p>Office M29, Freight gate 4 Dubai Airport Freezone Dubai, UAE</p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 footer_col2">
                     <div class="footer_map_container">
@@ -542,12 +551,12 @@
 
     <div class="floating_btn">
         <a target="_blank" href="https://wa.me/+971503524424" style="text-decoration: none;">
-          <div class="contact_icon">
-            <i class="fa fa-whatsapp my-float"></i>
-          </div>
+            <div class="contact_icon">
+                <i class="fa fa-whatsapp my-float"></i>
+            </div>
         </a>
         <p class="text_icon">Talk to us?</p>
-      </div>
+    </div>
 
 
 
