--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -41,7 +41,7 @@
                 <img src="img/inc_nav_logo.webp" alt="">
             </div>
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-7 col-7 header_contact_button">
-                <button>
+                <button onclick="window.location.href='tel:+971503524424'">
                     +971 503524424
                 </button>
             </div>
