--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -148,7 +148,8 @@
                     </div>
                 </div>
                 <a href="#">Blogs</a> <br>
-                <a href="contact.html">Contact Us</a> <br>
+                <a href="contact.html">Contact Us</a> <br><br>
+                <a href="tel:+971503524424"> &nbsp; &nbsp;+971 503524424</a> <br>
             </div>
         </header>
         <div class="service_sub_hero">
