--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
                     </div>
                 </div>
 
-                <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_social_col">
+                <div style="padding: 0;" class="col-xl-2 col-lg-2 col-md-2 col-sm-0 col-0 header_contact_button">
+                    <button onclick="window.location.href='tel:+971503524424'">
+                        +971 503524424
+                    </button>
+                </div>
+                <div style="padding: 0;" class="col-xl-1 col-lg-1 col-md-1 col-sm-0 col-0 nav_social_col">
                     <div class="nav_social_container">
                         <a target="_blank" href="https://www.instagram.com/incexpressshipping/"><i
                                 class="fa-brands fa-instagram"></i></a>
